--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -1,286 +1,5 @@
-﻿@model IEnumerable<WEB2.Models.OrderDetail>
-
-@{
-    Layout = null;
+﻿@{
+    ViewData["Title"] = "Index";
 }
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Zerone-Thanh toán</title>
-    <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon.png">
-    <!-- Form step -->
-    <link href="~/vendor/jquery-steps/css/jquery.steps.css" rel="stylesheet">
-    <!-- Datatable -->
-    <link href="~/vendor/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
-    <!-- Custom Stylesheet -->
-    <link href="~/css/style.css" rel="stylesheet">
-
-
-</head>
-<body>
-
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white topnav">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <p class="logo mb-0">Zer<span style="color: #be1e2d">o</span>ne.vn</p>
-                </a>
-
-                @await Html.PartialAsync("_LoginPartial")
-            </div>
-        </nav>
-    </header>
-    <!-- row -->
-    <div class="container">
-        <div class="container-fluid">
-            <div class="row page-titles mx-0">
-                <div class="col-sm-6 p-md-0">
-                    <div class="welcome-text">
-                        <h4>Thanh toán</h4>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a asp-area="" asp-action="Index" asp-controller="OrderDetails">Giỏ hàng</a></li>
-                        <li class="breadcrumb-item active"><a href="javascript:void(0)">Thanh toán</a></li>
-                    </ol>
-                </div>
-            </div>
-            <!-- row -->
-            <div class="row">
-                <div class="col-xl-12 col-xxl-12">
-                    <div class="card">
-                        <div class="card-header">
-                            <h4 class="card-title">Form step</h4>
-                        </div>
-                        <div class="card-body">
-                            <form asp-action="Edit" id="step-form-horizontal" class="step-form-horizontal">
-                                <div>
-                                    <h4>Thông tin cá nhân</h4>
-                                    <section>
-
-                                        @foreach (var item in Model) {
-                                            <div class="row">
-                                                <div class="col-lg-6 mb-4">
-                                                    <div class="form-group">
-                                                        <label class="text-label">Họ tên đầy đủ</label>
-                                                        <input asp-for="@item.Order.Customer.AppUser.FullName" class="form-control" disabled />
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-6 mb-4">
-                                                    <div class="form-group">
-                                                        <label class="text-label">Username</label>
-                                                        <input asp-for="@item.Order.Customer.AppUser.UserName" class="form-control" disabled />
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-12 mb-4">
-                                                    <div class="form-group">
-                                                        <label class="text-label">Địa chỉ email</label>
-                                                        <div class="input-group">
-
-                                                            <input asp-for="@item.Order.Customer.AppUser.Email" type="email" class="form-control" placeholder="example@example.com.com" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-12 mb-4">
-                                                    <div class="form-group">
-                                                        <label class="text-label">Số điện thoại</label>
-                                                        <div class="input-group">
-                                                            <input asp-for="@item.Order.Customer.AppUser.PhoneNumber" type="text" name="phoneNumber" class="form-control" placeholder="(+1)408-657-9007" required>
-
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-12 mb-4">
-                                                    <div class="form-group">
-                                                        <label class="text-label">Địa chỉ giao Hàng</label>
-                                                        <input asp-for="@item.Order.Customer.ShipAddress" type="text" name="place" class="form-control" required>
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            break;
-                                        }
-
-                                    </section>
-                                    <h4>Sản phẩm</h4>
-                                    <section>
-                                        <div class="col-12">
-                                            <div class="card">
-                                                <div class="card-body">
-                                                    <div class="table-responsive">
-                                                        <table class="display" style="width:100%">
-                                                            <thead>
-                                                                <tr>
-                                                                    <th>Sản phẩm</th>
-                                                                    <th>Tên sản phẩm</th>
-                                                                    <th>Giá</th>
-                                                                    <th>Số lượng</th>
-                                                                    <th>Thành tiền</th>
-                                                                </tr>
-                                                            </thead>
-                                                            <tbody>
-                                                                @{
-                                                                    double moneyItem = 0;
-                                                                   // double shipMoney = 0;
-                                                                    double pay = 0;
-
-                                                                }
-                                                                @foreach (var item in Model) {
-                                                                    <tr>
-                                                                        <td>
-                                                                            <img src="@Html.DisplayFor(modelItem => item.Product.Picture)" style="width: 96px; height: 96px ;max-width: 96px;max-height: 96px" />
-                                                                        </td>
-                                                                        <td>
-                                                                            @Html.DisplayFor(modelItem => item.Product.ProductName)
-                                                                        </td>
-                                                                        <td>
-                                                                            @Html.DisplayFor(modelItem => item.Price)
-                                                                        </td>
-                                                                        <td>
-                                                                            @Html.DisplayFor(modelItem => item.Quantity)
-                                                                        </td>
-
-                                                                        <td>
-                                                                            @Html.DisplayFor(modelItem => item.Total)
-                                                                        </td>
-
-                                                                    </tr>
-                                                                    moneyItem += item.Total;
-                                                                    pay = moneyItem;
-                                                                }
-
-
-                                                            </tbody>
-
-                                                        </table>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="text-right text-primary card-title"> Tiền sản phẩm: @moneyItem<span>VND</span> </div>
-                                        <div class="text-right text-danger card-title"> Tổng tiền: @pay<span>VND</span> </div>
-
-
-                                    </section>
-                                    <h4>Phương thức thanh toán</h4>
-                                    <section>
-
-                                        @foreach (var item in Model) {
-
-                                            <div class="form-group">
-                                                <label class="control-label">Chọn công ty vận chuyển</label>
-                                                <select id="ship" asp-for="@item.Order.Shipment.ShipperId" class="form-control" asp-items="ViewBag.ShipperId">
-                                                </select>
-                                                <span asp-validation-for="@item.Order.Shipment.ShipperId" class="text-danger"></span>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="control-label">Nhập mã khuyến mãi</label>
-                                                <input asp-for="@item.Order.Customer.Voucher_Details" class="form-control" />
-                                                <span asp-validation-for="@item.Order.Customer.Voucher_Details" class="text-danger"></span>
-                                            </div>
-
-                                            <div class="form-group">
-                                                <label class="control-label">Chọn phương thức thanh toán</label>
-                                                <select id = "typepay" asp-for="@item.Order.Payment.PaymentId" class="form-control" asp-items="ViewBag.PaymentId"></select>
-                                                <span asp-validation-for="@item.Order.Payment.PaymentId" class="text-danger"></span>
-                                            </div>
-
-
-
-
-                                            break;
-                                        }
-                                        <div class="text-right text-primary card-title"> Tiền sản phẩm: @moneyItem<span>VND</span> </div>
-                                        <script type="text/javascript">
-                                               var ranarr = [];
-                                               for (let i = 1 ; i < 8 ; ++i){
-                                                       var ran =  Math.floor(Math.random() * 20000) + 10000;
-                                                       ranarr.push(ran);
-                                               }
-                                                ranarr[1] = 0;
-                                                var shipmoney =  0;
-                                                var total =  @pay;
-                                                document.getElementById("shipmoney").innerHTML = shipmoney;
-                                                 document.getElementById("pay").innerHTML =  total;
-                                            $('#ship').change(function () {
-
-                                               var selectedValue = $(this).val();
-
-                                           
-
-                                                var shipmoney =    ranarr[selectedValue];
-                                                var total =  ranarr[selectedValue] + @pay;
-
-                                                document.getElementById("shipmoney").innerHTML = shipmoney;
-
-                                                  document.getElementById("pay").innerHTML = total;
-
-
-                                            });
-
-                                            var types = 1;
-                                              $('#typepay').change(function () {
-                                                 types =  $(this).val();
-                                         
-                                           
-
-                                            });
-
-
-                                        </script>
-
-                                        <div class="text-right text-primary card-title"> Tiền vận chuyển:<span id="shipmoney"></span><span>VND</span></div>
-                                        <div class="text-right text-primary card-title"> Tiền khuyến mãi:<span id="voucher"></span>0<span>VND</span></div>
-                                        <div class="text-right text-danger card-title"> Tổng tiền: <span id="pay"></span><span>VND</span> </div>
-                                     
-                                    </section>
-                                    <h4>Hóa đơn</h4>
-                                    <section>
-                                        <div>
-                                            cảm ơn đã mua hàng
-                                        </div>
-                                      
-                                    </section>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Required vendors -->
-    <script src="~/vendor/global/global.min.js"></script>
-    <script src="~/js/quixnav-init.js"></script>
-    <script src="~/js/custom.min.js"></script>
-
-
-
-    <script src="~/vendor/jquery-steps/build/step.js"></script>
-    <script src="~/vendor/jquery-validation/jquery.validate.min.js"></script>
-    <!-- Form validate init -->
-    <script src="~/js/plugins-init/jquery.validate-init.js"></script>
-
-
-
-    <!-- Form step init -->
-    <script src="~/js/plugins-init/jquery-steps-init.js"></script>
-
-    <!-- Datatable -->
-    <script src="~/vendor/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="~/js/plugins-init/datatables.init.js"></script>
-
-</body>
-
-</html>
-@section Scripts {
-<partial name="_ValidationScriptsPartial" />
-}
+<a href="@Url.Action("Payment","Orders")">Thanh toán</a>
