--- a/Areas/Admin/Views/_Layout.cshtml
+++ b/Areas/Admin/Views/_Layout.cshtml
@@ -154,7 +154,7 @@
                             <i class="icon icon-app-store"></i><span class="nav-text">Apps</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a></li>
+                            <li><a asp-area="Admin" asp-page="/Manage/Profile">Profile</a></li>
                             <li>
                                 <a class="has-arrow" href="javascript:void()" aria-expanded="false">Email</a>
                                 <ul aria-expanded="false">
