--- a/Areas/Admin/Pages/Manage/Calendar.cshtml
+++ b/Areas/Admin/Pages/Manage/Calendar.cshtml
@@ -119,17 +119,17 @@
         </div>
     </div>
 
-    <script src="./vendor/global/global.min.js"></script>
-    <script src="./js/quixnav-init.js"></script>
-    <script src="./js/custom.min.js"></script>
+    <script src="~/vendor/global/global.min.js"></script>
+    <script src="~/js/quixnav-init.js"></script>
+    <script src="~/js/custom.min.js"></script>
     <!--removeIf(production)-->
     <!-- Demo scripts -->
-    <script src="./js/styleSwitcher.js"></script>
+    <script src="~/js/styleSwitcher.js"></script>
 
-    <script src="./vendor/jqueryui/js/jquery-ui.min.js"></script>
-    <script src="./vendor/moment/moment.min.js"></script>
+    <script src="~/vendor/jqueryui/js/jquery-ui.min.js"></script>
+    <script src="~/vendor/moment/moment.min.js"></script>
 
-    <script src="./vendor/fullcalendar/js/fullcalendar.min.js"></script>
+    <script src="~/vendor/fullcalendar/js/fullcalendar.min.js"></script>
     <script type="text/javascript">
 
         ! function (e) {
