--- a/Views/OrderDetails/Pay.cshtml
+++ b/Views/OrderDetails/Pay.cshtml
@@ -216,7 +216,7 @@
          
 
 
-                                        <input type="button" value="Click" onclick="submitForm()" />
+                     
                                          <a id = "paid" href="@Url.Action("Payment","Orders", new {id = orderid})" >Thanh toán</a>
 
 
@@ -251,26 +251,33 @@
                                         var address =  document.getElementById('shipadd').value ;
                                         var types = $('#typepay').val();
                                               $('#paid').hide();
-                                        if(types != 1){
-                                                    $('#paid').show();
-                                                }
+                                        //if(types != 1){
+                                        //            $('#paid').show();
+                                        //        }
                                                     
                                   
                                             $('#typepay').change(function () {
                                                 types =  $(this).val();
                                                                                                                        
-                                                if(types != 1){
-                                                    $('#paid').show();
-                                                }
+                                                //if(types != 1){
+                                                //    $('#paid').show();
+                                                //}
                                                                                                                  
                                         });
                                                                                                                      
                                                                                                                    
-                                            console.log(address);
+                                        console.log(address);
                                         $('#shipadd').change(function(){
                                                 address = $('#shipadd').val();
                                                     console.log(address);
                                         })  ;
+
+                                        function check(){
+                                                  if(types != 1){
+                                                    $('#paid').show();
+                                                }
+                                                    
+                                        }
                                         function submitForm() {
 
                                         var model = new Object();
@@ -289,8 +296,8 @@
                                             processData: true,
                                             cache: false,
                                                    
-                                    });
-                                }
+                                            });
+                                        }
 
                                                                                                                
                                                                               
@@ -1029,6 +1036,9 @@
                         return !0;
                     },
                     onFinished: function () {
+                        submitForm();
+                         check();
+                                                    
                     },
                     onContentLoaded: function () { },
                     onInit: function () { },
