--- a/Views/Orders/PaymentConfirm.cshtml
+++ b/Views/Orders/PaymentConfirm.cshtml
@@ -4,4 +4,14 @@
 }
 
 <h2>@ViewBag.Message</h2>
+<script type="text/javascript">
+window.onload = function ()
+{
+    setTimeout(RedirectToUrl, 1500);
+}
+function RedirectToUrl()
+{
+    window.location = "/";
+}
+</script>
 
