--- a/Areas/Admin/Views/_Layout.cshtml
+++ b/Areas/Admin/Views/_Layout.cshtml
@@ -144,7 +144,7 @@
                             <i class="icon icon-single-04"></i><span class="nav-text">Dashboard</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a asp-area="Admin" asp-page="/Manage/Dashboard1">Dashboard 1</a></li>
+                            <li><a asp-controller="Dashboards" asp-action="Dashboard1" asp-area="Admin">Dashboard 1</a></li>
                             <li><a asp-area="Admin" asp-page="/Manage/Dashboard2">Dashboard 2</a></li>
                         </ul>
                     </li>
